sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  for (i<- 0 to getNombreValeurs()-1 ){
    var a:Int=i
    while(a!=0 && plusPetit(a,a-1) ){
      echange(a,a-1)
      if (plutPetit(a,a-1)){
        
      }
      a-=1
    }
  }
}